--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Advertising Poster</title>
+    <link rel="stylesheet" href="css/main.css">
+    
 </head>
 <body>
-    
+ New project   
 </body>
 </html>
