changes to poster

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advertising Poster</title>
     <link rel="stylesheet" href="css/main.css">
-    
+<div>box</div>
 </head>
 <body>
- New project   
+ <div class="container">
+
+    <hi> Reykjavik City Tour</hi>
+    <text-box></text-box>
+
+ </div> 
+
 </body>
 </html>
